<resources>
    <string name="app_name">BTwpguide</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="name_tab1">Yeni Özellikler</string>
    <string name="name_tab2">İpuçları ve Püf Noktaları</string>
    <string name="name_tab3">Videolar</string>
    <string name="tab1_1">1. WhatsApp Durum Güncellemelerini Oluşturma, Düzenleme, Silme Nasıl Yapılır?</string>
    <string name="tab1_2">2. WhatsApp Video Calling Nasıl Yapılır?</string>
    <string name="tab1_3">3. WhatsApp verilerini yedekleme veya geri yükleme</string>
    <string name="tab1_4">4. Bir Android kullanma</string>
    <string name="tab1_5">5.Aynı anda iki cihazda WhatsApp nasıl kullanılır?</string>
    <string name="tab1_6">6. WhatsApp üzerinde birisini engellediğinizde olacak 10 şey</string>
    <string name="tab1_7">7.WhatsApp güvenlik ipuçları: kişisel sohbet güvenliğiniz için 8 yol</string>
    <string name="tab1_8">8. WhatsApp ile ilgili dokümanlar nasıl gönderilir: WhatsAppda PDFleri ücretsiz paylaşın</string>
    <string name="tab1_9">9.Sesli Mesaj Nasıl Gönderilir?</string>
    <string name="tab1_10">10. WhatsAppdaki Belirli Kişilerden Son Görülenleri Gizle</string>
    <string name="tab1_1_txt">Artık WhatsApp Durum güncellemeleri olarak fotoğraf veya video ekleyebilirsiniz\nGüncellemeler olarak birden fazla resim veya klip yükleyebilirsiniz\nGüncellemeler 24 saat sonra kayboldu\nWhatsApp sekiz yaşına geldiği Cuma günü Cuma günü, cuma günü, uygulamanın metin mesajlarından uzaklaştığı ve fotoğraflara ve kısa videolara aşırı derecede güvenen bir geleceğe işaret eden yeni ve serin bir özellik ortaya çıkardı: Geçici durum güncellemesi. Facebookun sahip olduğu mesajlaşma şirketinden elde edilen bu yeni özellik, sosyal rakibi Snapchat\'a benzemekten çok daha fazla özellik taşıyor ve güncelleme, ekranın üst kısmındaki menüde durum için yeni bir sekme eklemedi, aynı zamanda bir kamera düğmesi de Durumunuzu veya bir kartvizitinizi veya grubunuzu güncellemek için kullanılabilecek şeylerin ortası. Bu heyecan verici bir değişikliktir ve gerçekten de basittir, ancak bu özelliği nasıl kullanacağınız konusunda herhangi bir şüpheniz varsa, yenilenen WhatsApp Durum güncellemeleri hakkında bilmeniz gerekenler aşağıda açıklanmıştır.\nEski metin WhatsApp durumuna ne oldu \nÇoğu insanın görmezden geldiği çizgiyi "Varsın, WhatsApp kullanıyorum" varsayımında bırakarak kastediyorsunuz? Bu gitti. Geçmişi geride bırak. Bazı insanlara göre eski metin durumu hala görünür durumda ancak çoğumuz için yok oldu. Hâlâ eski durumu görüyorsanız, uygulamayı yeniden başlatmayı deneyin. Söylentilere göre, WhatsApp taglines adı altında bir geri dönüş yapacak, ancak başka bir gündür \nBir fotoğraf veya videoyu WhatsApp durumum olarak nasıl ayarlayabilirim \nYapabileceğiniz bir WhatsApp statüsü oluşturmak için birkaç farklı yol var. Onlara bakalım \nDurum seçeneğini kullanarak WhatsApp Durumu nasıl oluşturulur \nWhatsAppı açın \nDuruma dokunun \nDurumum diyalog kutusuna dokunun. Halihazırda bir statünüz varsa, sağ tarafta bir + işareti bulunan küçük daireye hafifçe vurun \nDeklanşöre basarak fotoğraf çekin veya düğmeyi basılı tutun. Veya ekranın altındaki kamera rulosundan birini seçin \nİsterseniz altyazı ekle üzerine dokunduğunuzda bir başlık ekleyin ve ardından sağ alt taraftaki Gönder simgesine hafifçe vurun \nGörüntülemek için üzerine dokunabilir veya güncellemeyi kaç kişinin gördüğünü kontrol etmek veya iletmek için sağ taraftaki menü düğmesine basabilirsiniz. İnsanların adlarını görmek için göz simgesine dokunun \nWhatsApp statüsü 24 saat içinde kaybolacaktır \nWhatsapp ayarla durumu WhatsAp \ \nİşte bir WhatsApp Durumu oluşturmak için başka bir yöntem \ WhatsApp\'ı açın \nSol üstteki kamera simgesine hafifçe dokunun \nBir fotoğraf veya video çekin veya kamera rulosundan birini seçin \nİsterseniz bir başlık ekleyin. Sonlandırmak için yeşil renkli kene hafifçe vurun \nSonra, bir kişiye gönderebilir veya durumunuzu güncellemek için Durumum\'u seçebilirsiniz. Sağ alt taraftaki Gönder simgesine hafifçe dokunun \nDurumunuzu yukarıda gösterildiği gibi görmek için Durum sekmesine gidebilirsiniz \nBerbat oldum, WhatsApp Durumumu nasıl silerim \nBir hata yaptım? Endişelenmeyin, bu güncellemeleri kolayca silebilirsiniz. WhatsApp Durumunuzu şu şekilde silebilirsiniz \n \ \nAçıkçası WhatsApp\'u açın \nDurum sekmesine gidin. Silmek istediğiniz durumu bulmak için ilerleyin \nDurumunu kaç kişinin gördüğünü gösteren göz simgesine dokunun \nBu, durumunuzu görüntüleyen kişilerin bir listesini gösterir \nÇöp kutusu simgesine dokunun ve onaylamak için Sil öğesine dokunun \nWhatsapp silme durumu WhatsAp \ \nBirden çok karışıklık yaratmayacak şekilde, bir seferde birden fazla WhatsApp Durum güncellemesini silmek için bir yol yok gibi görünüyor \ \nWhatsApp Durumu\'nun gizlilik ayarlarını nasıl düzenleyebilirim \nBelirli WhatsApp kişilerinin durumunuzu görebileceği şekilde ayarlayabilir veya bunları göremeyen kişilerin listesini yapabilir veya tüm Kişilerinize gösterecek şekilde ayarlayabilirsiniz \nWhatsApp Durumunuzun gizlilik ayarlarını aşağıdaki şekilde değiştirebilirsiniz \nBir kez daha, doğal olarak WhatsApp\'u açın \nDurum\'a gidin ve sağ üstteki Üç nokta menüsü simgesine hafifçe vurun ve Durum gizliliği öğesine hafifçe vurun \nAlternatif olarak, ana sohbet ekranında menü düğmesine dokunup Ayarlar> Hesap> Gizlilik> Durum komutunu açabilirsiniz \nBurada üç seçenek vardır: Kişilerim, tüm kişileriniz; Dışarıda bırakmak için kişileri seçmenize izin veren .. haricindeki kişilerim; Ve Yalnızca ile paylaşın, böylece paylaşımda bulunacak kişileri seçebilirsiniz \nVe iş bitti, WhatsApp Durum güncellemeleri hakkında bilmeniz gereken tek şey bu. Daha fazla şey öğrenmek için Nasıl Yapılır bölümümüze bakın ve bize bu yeni özellik hakkında ne düşündüğünüzü söyleyin veya aşağıdaki yorumları kullanarak sorularınızı bize sorun.</string>
    <string name="tab1_2_txt">WhatsApp video çağrısını etkinleştirmek ve başlatmak gerçekten basittir\nWhatsApp video görüşmesi, WhatsApp içindeki sesli çağrılara benzer şekilde çalışır\nHer iki tarafın da, WhatsApp video çağrısını destekleyen uygulama sürümüne sahip olması gerekir\nWhatsApp resmi olarak Salı günü görüntülü görüşmeyi başlattı ve bu özellik şu anda Android, iPhone ve Windows kullanıcılarına sunuluyor. Android ve iPhone için video araması desteği ile Güncelleme WhatsApp resmi olarak piyasaya sürüldü, bu nedenle ilk görüntülü görüşmeyi yapmak için bu özelliği güncellemeniz yeterlidir. . IOS veya Android cihazınız otomatik güncellemeleri alacak şekilde ayarlanmamışsa veya WhatsApp\'ın güncellendiğini bilmiyorsanız, yalnızca App Store veya Google Play\'e gidin ve mevcut güncellemeleri kontrol etmeniz yeterlidir.\nVideo görüşme seçeneğini görmüyorsanız veya WhatsApp video görüşmesi çalışmıyorsa veya WhatsApp video görüşmeleri size bir hata veriyorsa, işlerin daha iyi sonuçlanıp işemeyeceğini görmek için WhatsApp beta sürümü APK\'yi indirebilirsiniz. WhatsApp video görüşmesini bekleyemezseniz aşağıdaki adımları takip edin.\nWhatsApp video arama özelliğinin telefonunuzda görünmesini beklediğinizden ayrıca sunucunun yüklenmesine yardımcı olması için tavsiyede bulunduğumuzu unutmayın. Ancak, şu anda görüntülü görüşme başlatmak istediğinizden eminseniz şu adımları izleyin.\nWhatsApp video çağrısı özelliği şu an nasıl elde edilir?\nWhatsApp video çağrısı özelliği yakın zamanda Android ve Windows Mobile için WhatsApp beta yapılarında tanıtıldı. WhatsApp video görüşmesine erken erişmek için betalar için kayıt olabilirsiniz.\nWhatsApp beta programına kaydolmak ve Android\'de WhatsApp video çağrısını etkinleştirmek için bu adımları uygulayın:\nGoogle Play\'i açın ve WhatsApp için arama yapın\nWhatsApp\'ın Google Play girişini açın\nSayfanın altına doğru ilerleyin\nBir beta testi olalım diyen bölümde BENİM\'imde dokunun\nBir sonraki ekranda onaylayın ve birkaç dakika bekleyin\nGoogle Play\'de WhatsApp giriş sayfasına geri dönün\nWhatsApp\'ı beta sürümüne güncellemek için bir seçenek görmelisiniz\nUygulamayı güncelle\nAlternatif olarak, ne yaptığınızı biliyorsanız APK Aynası veya APK Pure gibi bir web sitesinden görüntülü arama (v2.16.354) desteği ile birlikte verilen WhatsApp APK\'yi indirebilirsiniz. Okuyucularımızın çoğunun, görüntülü arama ve diğer özellikler için resmi olarak WhatsApp beta sürümünü kullanmaya yönelik yukarıda belirtilen adımları izlemelerini ve WhatsApp APK\'sını indirmeyle ilişkili riskleri atlamalarını öneriyoruz.\nYukarıda bahsedilen yöntemlerden herhangi birini uyguladıysanız, tebrikler, Android için en yeni WhatsApp beta sürümünü çalıştırıyorsunuz demektir. Bu, WhatsApp video görüşmeleri ve diğer yeni özellikler için destek ile gelir - ilk WhatsApp video görüşmesini yapmak için, aşağıda belirtilen adımları izleyin.\nWindows Phone\'da WhatsApp beta\'ya kaydolmak için support@whatsapp.com\'a mesaj atmanız ve beta ile ilgili bir nokta isteyin. Süreç insan müdahalesini içerir, bu nedenle muhtemelen çok daha yavaş olacaktır. Bir kez beta aşamasındaysanız, Windows Mobile\'da WhatsApp video çağrısına erişebilirsiniz.\nWhatsApp video görüşmesi nasıl yapılır?\nEn yeni WhatsApp beta sürümünü çalıştırıyorsanız veya video çağrısı özelliği başlatıldıktan sonra kullanılabilir durumdaysa, başka bir WhatsApp kullanıcısıyla bir video çağrısı yapmak oldukça basittir.\nİşte WhatsApp içinde video görüşmesi yapma:\nWhatsApp\'u açın (tabii!)\nKişiler sekmesine gidin\nBir WhatsApp video görüşmesi başlatmak istediğiniz kişiyi bulun ve hafifçe vurun.\nEkranın üst kısmındaki telefon simgesine dokunun\nAçılır pencereden Video çağrısı\'nı seçin\nİşte bu - ilk WhatsApp video görüşmesi yapmışsın!\nİşe yarayan WhatsApp video çağrısı için her iki tarafın da bu özelliği destekleyen bir WhatsApp oluşturması gerektiğini unutmayın. WhatsApp, video görüşmesi bittikten sonra size geribildirim isteyebilir.</string>
    <string name="tab2_1">1.Zoom, Pop-out ve Videoları Düzenle</string>
    <string name="tab2_2">2. Sohbeti Temizle, ancak Yıldızlı Mesajlar Tutun</string>
    <string name="tab2_3">3.Veri veya Wi-Fi için 3.Control İndirme <Ayarları></Ayarları></string>
    <string name="tab2_4">4. WhatsApp Beta ile Yeni Özellik <Kazanın></Kazanın></string>
    <string name="tab2_5">5. Aynı mesajı birden fazla kişiye bildiremeden gönder</string>
    <string name="tab2_6">6. En çok kiminle konuştuğunu bulun.</string>
    <string name="tab2_7">7.Geçimsiz aşırı grup sohbetleri</string>
    <string name="tab2_8">8.Mesajları mavi keneler olmadan okuyun</string>
    <string name="tab2_9">9.Bireysel sohbetler için bir ana ekran kısayolu ekleyin</string>
    <string name="tab2_10">10.Uygulama Bilgisayarınızda WhatsApp</string>
    <string name="tab2_11">11. Dev bir kalbi yollayın</string>
    <string name="tab2_12">12. Doğrudan bir konuya gömülü bir mesajın üzerine doğrudan bilgi verin</string>
    <string name="tab2_13">13.Özel bildirimler</string>
</resources>