<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/tab2_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tab2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_1"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_2"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_3"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_4"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_5"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_6"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_7"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_8"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_9"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_tab2_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_10"
                android:textAlignment="center" />
            <Button
                android:id="@+id/btn_tab2_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_11"
                android:textAlignment="center"  />
            <Button
                android:id="@+id/btn_tab2_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_12"
                android:textAlignment="center"  />
            <Button
                android:id="@+id/btn_tab2_13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shapes"
                android:text="@string/tab2_13"
                android:textAlignment="center"  />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/tab2_INVISsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tab2_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </ScrollView>

</RelativeLayout>