<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/tab1_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <Button
            android:id="@+id/btn_tab1_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_1"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_2"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_3"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_4"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_5"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_6"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_7"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_8"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_9"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_tab1_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shapes"
            android:text="@string/tab1_10"
            android:textAlignment="center" />
        </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/tab1_INVISsv"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/tab1_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </ScrollView>

</RelativeLayout>
